# malwaredb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  log.md  mdb_server_config.toml.example
.cargo/: config
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: cargo-update.yml  commisery.yml  coverage.yml  cross.yml  dco.yml  dependency-review.yml  lint.yml  release.yml  sbom_manifest_action.yml  sbom_manifest_check.yml  scorecard.yml  test.yml
client/: Cargo.toml  README.md  build.rs
client/src/: config.rs  lib.rs  main.rs  option_cert_path_serialization.rs
client/src/cli/: cart.rs  mod.rs  report.rs  retrieval.rs  similar.rs  submit.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: digest.rs  lib.rs
crates/exec/: Cargo.toml
crates/exec/src/: lib.rs  main.rs  utils.rs
crates/exec_parsing/: Cargo.toml
crates/exec_parsing/src/: lib.rs
crates/exec_parsing/testdata/: source.c
crates/server/: Cargo.toml  README.md  build.rs
crates/server/src/: crypto.rs  lib.rs  types.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs  main.rs  utils.rs
crates/types/testdata/: readme.md  (+4 more)
crates/vt/: Cargo.toml  README.md
crates/vt/src/: lib.rs
crates/vt/src/filereport/: elf.rs  macho.rs  mod.rs  pe.rs
crates/vt/src/filerescan/: mod.rs
crates/vt/testdata/: not_found.json  rescan.json  wrong_key.json
src/: build.rs  main.rs
src/cli/: cart_io.rs  config.rs  mod.rs  run.rs
src/gui/: admin.slint  mod.rs
testdata/: .gitignore  ca_cert.pem  make_certs.sh  server_cert.pem  server_key.pem
tests/: client.rs
(+89 files in other folders)
