[package]
name = "malwaredb-virustotal"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
description = "Logic and datatypes for interacting with VirusTotal"
homepage = "https://malwaredb.net/"
repository = "https://github.com/malwaredb/malwaredb-rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
zeroize = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }
